# menger-sponge-demo

./: .gitignore  .gitmodules  CMakeLists.txt  CPSC 453 Menger Sponge.sln  CPSC 453 Menger Sponge.vcxproj  CPSC 453 Menger Sponge.vcxproj.filters  makefile  math.h  program.cpp  program.ilk  readme.md
shaders/: fragment-shader-flat.glsl  fragment-shader.glsl  vertex-shader-flat.glsl  vertex-shader.glsl
src/: math.cpp  math.h  program.cpp
